// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Demo Data (real world-ish example) > should process all demo data correctly > demo-data-combinatorial 1`] = `
"// Semantic SCSS Variables
$base-size-xs: $base-size-xs;
$base-colour-grey-400: $base-colour-grey-400;
$base-font-size-xl: $base-font-size-xl;
$global-font-uidefaultfont: $global-font-uidefaultfont;
$base-font-linespacing-lg: $base-font-linespacing-lg;
$base-font-weight-semibold: $base-font-weight-semibold;
$base-colour-static-white: $base-colour-static-white;
$base-size-lg: $base-size-lg;
$base-radius-sm: $base-radius-sm;
$global-size-border-width: $global-size-border-width;
$base-colour-grey-100: $base-colour-grey-100;
$global-colour-textonlight: $global-colour-textonlight;
$base-font-weight-regular: $base-font-weight-regular;
$base-colour-grey-300: $base-colour-grey-300;
$base-colour-blue-300: $base-colour-blue-300;

// Generated SCSS Mixins
@mixin input {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: $base-size-xs;
  padding: 0rem;
  width: 15.9375rem;
}
@mixin input-label {
  display: flex;
  flex-direction: column;
  color: $base-colour-grey-400;
  font-family: $global-font-uidefaultfont;
  font-size: $base-font-size-xl;
  font-weight: 500;
  font-style: normal;
  line-height: $base-font-linespacing-lg;
  width: 15.9375rem;
}
@mixin input-label-active {
  color: $base-colour-blue-300;
}
@mixin input-input-box {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $base-size-lg;
  padding: 0.6875rem $base-size-lg;
  background: $base-colour-static-white;
  width: 15.9375rem;
  border-radius: $base-radius-sm;
}
@mixin input-input-box-resting {
  border: $global-size-border-width solid $base-colour-grey-100;
  box-shadow: inset 0 $global-size-border-width 0 0 $base-colour-grey-100, inset (-$global-size-border-width) 0 0 0 $base-colour-grey-100, inset 0 (-$global-size-border-width) 0 0 $base-colour-grey-100, inset $global-size-border-width 0 0 0 $base-colour-grey-100;
}
@mixin input-input-box-hover {
  border: $global-size-border-width solid $base-colour-grey-300;
  box-shadow: inset 0 $global-size-border-width 0 0 $base-colour-grey-300, inset (-$global-size-border-width) 0 0 0 $base-colour-grey-300, inset 0 (-$global-size-border-width) 0 0 $base-colour-grey-300, inset $global-size-border-width 0 0 0 $base-colour-grey-300;
}
@mixin input-input-box-active {
  border: 0.125rem solid $base-colour-blue-300;
  box-shadow: inset 0 0.125rem 0 0 $base-colour-blue-300, inset -0.125rem 0 0 0 $base-colour-blue-300, inset 0 -0.125rem 0 0 $base-colour-blue-300, inset 0.125rem 0 0 0 $base-colour-blue-300;
}
@mixin input-input-box-input-text {
  display: flex;
  flex-direction: column;
  color: $global-colour-textonlight;
  font-family: $global-font-uidefaultfont;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: 20px;
  width: 14.4375rem;
}
"
`;

exports[`Demo Data (real world-ish example) > should process all demo data correctly > demo-data-template 1`] = `
"// Semantic SCSS Variables
$base-size-xs: $base-size-xs;
$base-colour-grey-400: $base-colour-grey-400;
$base-font-size-xl: $base-font-size-xl;
$global-font-uidefaultfont: $global-font-uidefaultfont;
$base-font-linespacing-lg: $base-font-linespacing-lg;
$base-font-weight-semibold: $base-font-weight-semibold;
$base-colour-static-white: $base-colour-static-white;
$base-size-lg: $base-size-lg;
$base-radius-sm: $base-radius-sm;
$global-size-border-width: $global-size-border-width;
$base-colour-grey-100: $base-colour-grey-100;
$global-colour-textonlight: $global-colour-textonlight;
$base-font-weight-regular: $base-font-weight-regular;
$base-colour-grey-300: $base-colour-grey-300;
$base-colour-blue-300: $base-colour-blue-300;

// Generated SCSS Mixins
@mixin input-resting {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: $base-size-xs;
  padding: 0rem;
  width: 15.9375rem;
}
@mixin input-label-resting {
  display: flex;
  flex-direction: column;
  color: $base-colour-grey-400;
  font-family: $global-font-uidefaultfont;
  font-size: $base-font-size-xl;
  font-weight: 500;
  font-style: normal;
  line-height: $base-font-linespacing-lg;
  width: 15.9375rem;
}
@mixin input-input-box-resting {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $base-size-lg;
  background: $base-colour-static-white;
  width: 15.9375rem;
  border: $global-size-border-width solid $base-colour-grey-100;
  box-shadow: inset 0 $global-size-border-width 0 0 $base-colour-grey-100, inset (-$global-size-border-width) 0 0 0 $base-colour-grey-100, inset 0 (-$global-size-border-width) 0 0 $base-colour-grey-100, inset $global-size-border-width 0 0 0 $base-colour-grey-100;
  border-radius: $base-radius-sm;
  padding: calc(0.6875rem - #{$global-size-border-width}) calc(#{$base-size-lg} - #{$global-size-border-width});
}
@mixin input-input-box-input-text-resting {
  display: flex;
  flex-direction: column;
  color: $global-colour-textonlight;
  font-family: $global-font-uidefaultfont;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: 20px;
  width: 14.4375rem;
}
@mixin input-hover {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: $base-size-xs;
  padding: 0rem;
  width: 15.9375rem;
}
@mixin input-label-hover {
  display: flex;
  flex-direction: column;
  color: $base-colour-grey-400;
  font-family: $global-font-uidefaultfont;
  font-size: $base-font-size-xl;
  font-weight: 500;
  font-style: normal;
  line-height: $base-font-linespacing-lg;
  width: 15.9375rem;
}
@mixin input-input-box-hover {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $base-size-lg;
  background: $base-colour-static-white;
  width: 15.9375rem;
  border: $global-size-border-width solid $base-colour-grey-300;
  box-shadow: inset 0 $global-size-border-width 0 0 $base-colour-grey-300, inset (-$global-size-border-width) 0 0 0 $base-colour-grey-300, inset 0 (-$global-size-border-width) 0 0 $base-colour-grey-300, inset $global-size-border-width 0 0 0 $base-colour-grey-300;
  border-radius: $base-radius-sm;
  padding: calc(0.6875rem - #{$global-size-border-width}) calc(#{$base-size-lg} - #{$global-size-border-width});
}
@mixin input-input-box-input-text-hover {
  display: flex;
  flex-direction: column;
  color: $global-colour-textonlight;
  font-family: $global-font-uidefaultfont;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: 20px;
  width: 14.4375rem;
}
@mixin input-active {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: $base-size-xs;
  padding: 0rem;
  width: 15.9375rem;
}
@mixin input-label-active {
  display: flex;
  flex-direction: column;
  color: $base-colour-blue-300;
  font-family: $global-font-uidefaultfont;
  font-size: $base-font-size-xl;
  font-weight: 500;
  font-style: normal;
  line-height: $base-font-linespacing-lg;
  width: 15.9375rem;
}
@mixin input-input-box-active {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $base-size-lg;
  background: $base-colour-static-white;
  width: 15.9375rem;
  border: 0.125rem solid $base-colour-blue-300;
  box-shadow: inset 0 0.125rem 0 0 $base-colour-blue-300, inset -0.125rem 0 0 0 $base-colour-blue-300, inset 0 -0.125rem 0 0 $base-colour-blue-300, inset 0.125rem 0 0 0 $base-colour-blue-300;
  border-radius: $base-radius-sm;
  padding: 0.5625rem calc(#{$base-size-lg} - 0.125rem);
}
@mixin input-input-box-input-text-active {
  display: flex;
  flex-direction: column;
  color: $global-colour-textonlight;
  font-family: $global-font-uidefaultfont;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: 20px;
  width: 14.4375rem;
}
"
`;
